# rust-code-examples

./: .gitignore  Cargo.toml  README.md
apps/: README.md
apps/api-rust-sqlx/: Cargo.toml  README.md
apps/api-rust-sqlx-postgres/: .env.sample  Cargo.toml  README.md
apps/api-rust-sqlx-postgres/migrations/: 20230430162139_users.sql
apps/api-rust-sqlx-postgres/src/: main.rs
apps/api-rust-sqlx-postgres/src/auth/: mod.rs  routes.rs
apps/api-rust-sqlx-postgres/src/users/: mod.rs  model.rs  routes.rs
apps/api-rust-sqlx-sqlite/migrations/: 20230426230854_users.sql
apps/api-rust-sqlx/migrations/: 20230426232835_add_user_email.sql
apps/api-rust-sqlx/src/: arg_parser.rs  main.rs  queries.rs
apps/axum-aws/: Cargo.toml
apps/axum-aws/src/: errors.rs  main.rs  middlewares.rs  routes.rs
apps/axum-sse/: Cargo.toml
apps/axum-sse/src/: main.rs
apps/axum-websockets/: Cargo.toml
apps/axum-websockets/src/: main.rs
apps/byte-converter/: Cargo.toml
apps/cpf-gen/: Cargo.toml  README.md
apps/cpf-gen-actix-api/: Cargo.toml
apps/cpf-gen-actix-api/src/: main.rs  paths.rs  types.rs  utils.rs
apps/cpf-gen/src/: lib.rs
apps/dioxus-example/: Cargo.toml
apps/dioxus-example/src/: main.rs
apps/egui-app/: Cargo.toml  README.md
apps/egui-app/src/: main.rs
apps/image-processing/: Cargo.toml
apps/image-processing/benches/: benchmark.rs
apps/image-processing/src/: image.rs  lib.rs  main.rs
apps/leptos-csr/: Cargo.toml  index.html  style.scss
apps/leptos-csr/src/: main.rs
apps/logger-app/: Cargo.toml
apps/logger-app/src/: main.rs
apps/mp4-length/: .gitignore  Cargo.toml
apps/mp4-length/src/: arg_parser.rs  main.rs
apps/requester/: README.md
apps/requester/src/: main.rs  utils.rs
apps/sycamore-ex/: Cargo.toml  README.md  index.html  style.css
apps/sycamore-ex/src/: main.rs
apps/tauri-app/: README.md  package.json  vite.config.ts
apps/tauri-app/src/: Home.vue  main.ts
apps/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-app/src-tauri/src/: main.rs
apps/tauri-app/src/components/: FileWriter.vue  Greet.vue  SecondWindow.vue
async-rust/: Cargo.toml
async-rust/src/: main.rs
bitecode-serialization/: Cargo.toml
bitecode-serialization/src/: main.rs
byte-converter/: README.md
byte-converter/src/: main.rs
bytecode-serialization/: README.md
cpf-gen/: Cargo.toml  README.md
cpf-gen/src/: lib.rs  main.rs
egui-app/: Cargo.toml  README.md
egui-app/src/: main.rs
ffi-wasm/: README.md
ffi-wasm/neon-rust/: Cargo.toml  README.md  package.json
ffi-wasm/neon-rust/neon-test-js/: README.md  bun.lockb  index.ts  package.json
ffi-wasm/neon-rust/src/: lib.rs
ffi-wasm/node-with-rust-ffi-napi/node/: package-lock.json  package.json
ffi-wasm/node-with-rust-ffi-napi/rust/: Cargo.toml
ffi-wasm/python-ffi/: Cargo.toml  main.py  requirements.txt
ffi-wasm/python-ffi/src/: lib.rs
ffi-wasm/python-ffi/tests/: testfile.rs
ffi-wasm/static-dynamic-link-cdylib/cdylib-example/: Cargo.toml
ffi-wasm/static-dynamic-link-cdylib/cdylib-usage/: Cargo.toml  build.rs
ffi-wasm/static-dynamic-link-cdylib/cdylib-usage/src/: main.rs
ffi-wasm/wasm-tests/: README.md
ffi-wasm/wasm-tests/node/: index.js  package-lock.json
ffi-wasm/wasm-tests/wasm-pack/: Cargo.toml  LICENSE_MIT
ffi-wasm/wasm-tests/wasm-pack/src/: lib.rs
ffi-wasm/wasm-tests/wasm-rust/src/: lib.rs
json-tests/: README.md  package-lock.json
json-tests/rust-json/src/: main.rs
json-tests/ts-json/: index.js  index.ts  package.json
leet-code/: Cargo.toml  README.md
leet-code/src/: main.rs
node-with-rust-ffi-napi/: README.md
node-with-rust-ffi-napi/node/: index.js
node-with-rust-ffi-napi/rust/src/: lib.rs  main.rs
primary/: Cargo.toml
primary/src/: concurrency.rs  conversions.rs  hashmaps.rs  lifehooks.rs  main.rs  random.rs  types.rs
primary/src/teste/: mod.rs  secondfile.rs  teste.rs
primary/src/utils/: cloneonwrite.rs  testing.rs
primary/tests/: integration_test.rs
requester/: Cargo.toml  README.md
requester/src/: arg_parser.rs  main.rs  utils.rs
rust-code-examples/: Cargo.toml  README.md
rust-code-examples/src/: any.rs  async_iterator.rs  box_leak.rs  channels.rs  command_piped.rs  concurrency.rs  conditional_compilation.rs  conversions.rs  cow.rs  enum_dispatch.rs  error_examples.rs  ext_iterators.rs  file_manipulation.rs  hashmaps.rs  into.rs  into_from.rs  lifehooks.rs  lifetimes.rs  limited_concurrency.rs  main.rs  memoization.rs  mocks.rs  multiple_tokio_worker_types.rs  new_type.rs  parallelism.rs  random.rs  self_referential.rs  singleton.rs  state_machine.rs  string_padding.rs  traits.rs  type_state.rs  types.rs
rust-code-examples/src/data_types/: linked_list_enum.rs  mod.rs  single_linked_list.rs
rust-code-examples/src/design_patterns/: builder.rs  builder.ts  factory.rs  factory.ts  mod.rs  observer.rs  observer.ts  strategy.rs  strategy.ts
rust-code-examples/src/net/: async_tcp.rs  mod.rs  sync_tcp.rs
rust-code-examples/src/trait_examples/: associated_constants.rs  associated_types.rs  dynamic_dispatch.rs  extend_unwrap.rs  generic_traits.rs  high_trait_bounds.rs  mod.rs  object_safe_traits.rs  operator_overloading.rs  phantom_data.rs  trait_constraints.rs  traits.rs
rust-code-examples/src/utils/: cloneonwrite.rs  closures.rs  file_seek.rs  mod.rs  ref_cell.rs  secondfile.rs
rust-code-examples/tests/: integration_test.rs
rust-crates/: README.md
rust-for-rustaceans/src/: chapter_1.rs  chapter_2.rs  chapter_3.rs  chapter_4.rs  chapter_5.rs  lifetimes.rs  main.rs
serialization/: README.md
serialization/json-tests/: test.json
serialization/json-tests/rust-json/: Cargo.toml
serialization/json-tests/rust-json/src/: json_rpc.rs  main.rs  try_from.rs
serialization/json-tests/ts-json/: package-lock.json
serialization/protobuf/: Cargo.toml  build.rs
serialization/protobuf/src/: main.rs  persons.proto
src/: conversions.rs  main.rs  random.rs
wasm-tests/node/: package.json
wasm-tests/wasm-rust/: Cargo.toml
wasm-tests/wasm-rust/src/: lib.rs
