[package]
name = "tests-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.3"
serde_json = "1.0.82"
serde = { version = "1.0", features = ["derive"] }
unicode-segmentation = "1.9.0"
futures = "0.3.27"
tokio = { version = "1.26.0", features = ["full"] }
