[package]
name = "tests-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8.0"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
unicode-segmentation = "1.10.1"
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["full"] }
reqwest = "0.11.22"
serde_yaml = "0.9.27"
mockito = "1.2.0"
mockall = "0.11.4"
async-trait = "0.1.74"
static_assertions = "1.1.0"
rand = "0.8.5"
enum_dispatch = "0.3.12"
