[package]
name = "api-mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
# https://github.com/tokio-rs/tracing/issues/2565
regex = { version = "1.8.1", features = ["unicode-case"] }

axum = "0.6.16"
hyper = "0.14.26"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "fs"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
clap = { version = "4.2.4", features = ["derive"] }
tracing = "0.1.37"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls"] }
dotenvy = "0.15.7"
