[package]
name = "cpf-generator-api"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
# strip = true # Uncomment this line to strip debug symbols from the binary

[dependencies]
actix-cors = "0.6.3"
actix-web = "4.2.1"
derive_more = "0.99.17"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
unicode-segmentation = "1.10.0"
